--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 02:05:02 2018</p>
+         Last Run: Mon Nov  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>21</td>
-                        <td>69</td>
+                        <td>22</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>20</td>
-                        <td>71</td>
+                        <td>22</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>11</td>
-                        <td>73</td>
+                        <td>13</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
-                 "20",
-                 "11"
+                 "22",
+                 "22",
+                 "13"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "71",
-                 "73"
+                 "72",
+                 "73",
+                 "76"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
                  "96",
-                 "94"
+                 "97",
+                 "95"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 02:05:02 2018</p>
+         Last Run: Mon Nov  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-8</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>61</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>5</td>
                         <td>WSW</td>
@@ -261,7 +261,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -270,13 +270,13 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
@@ -306,7 +306,7 @@
                "data":[
                  "-8",
                  "-11",
-                 "-11"
+                 "-13"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-8"
+                 "-9"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "63",
-                 "64"
+                 "64",
+                 "65",
+                 "65"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 02:05:02 2018</p>
+         Last Run: Mon Nov  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -468,7 +468,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -490,9 +490,9 @@
                         <td>7</td>
                         <td>49</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
+                 "52",
                  "55",
-                 "53"
+                 "54"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 02:05:02 2018</p>
+         Last Run: Mon Nov  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -703,7 +703,7 @@
                         <td>3</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -818,7 +818,7 @@
                "data":[
                  "46",
                  "46",
-                 "45"
+                 "46"
                ]
              },
              {
