--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 03:05:02 2018</p>
+         Last Run: Mon Nov  5 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>22</td>
-                        <td>72</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>96</td>
                      </tr>
                      <tr>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>22</td>
-                        <td>73</td>
+                        <td>21</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -57,7 +57,7 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>13</td>
+                        <td>12</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "22",
-                 "22",
-                 "13"
+                 "21",
+                 "12"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "71",
                  "72",
-                 "73",
                  "76"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 03:05:02 2018</p>
+         Last Run: Mon Nov  5 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-8</td>
                         <td>-8</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>5</td>
                         <td>WSW</td>
@@ -270,10 +270,10 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-8</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -306,7 +306,7 @@
                "data":[
                  "-8",
                  "-11",
-                 "-13"
+                 "-11"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-9"
+                 "-8"
                ]
              }
            ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "64",
                  "65",
-                 "65"
+                 "65",
+                 "66"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 03:05:02 2018</p>
+         Last Run: Mon Nov  5 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 03:05:02 2018</p>
+         Last Run: Mon Nov  5 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -678,36 +678,36 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>7</td>
+                        <td>15</td>
                         <td>46</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>82</td>
+                        <td>86</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>3</td>
-                        <td>1</td>
-                        <td>8</td>
+                        <td>0</td>
+                        <td>15</td>
                         <td>46</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>15</td>
                         <td>46</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>73</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -735,7 +735,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-1",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "8",
-                 "8"
+                 "15",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "82",
-                 "79",
-                 "73"
+                 "86",
+                 "83",
+                 "78"
                ]
              }
            ]
