--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 05:05:03 2018</p>
+         Last Run: Mon Nov  5 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>24</td>
                         <td>72</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NE</td>
                         <td>97</td>
                      </tr>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>16</td>
-                        <td>73</td>
+                        <td>17</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "16",
+                 "17",
                  "8"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "72",
-                 "73",
+                 "74",
                  "76"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 05:05:03 2018</p>
+         Last Run: Mon Nov  5 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -261,11 +261,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "67",
+                 "68",
                  "67"
                ]
              },
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "11",
-                 "16",
-                 "16"
+                 "17",
+                 "17"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 05:05:03 2018</p>
+         Last Run: Mon Nov  5 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>7</td>
-                        <td>54</td>
+                        <td>2</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>52</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
-                        <td>7</td>
-                        <td>52</td>
+                        <td>-1</td>
+                        <td>2</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>56</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>7</td>
-                        <td>49</td>
+                        <td>2</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>54</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0"
                ]
              },
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "2",
+                 "2",
+                 "2"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "52",
-                 "49"
+                 "55",
+                 "53",
+                 "51"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "56",
-                 "54"
+                 "60",
+                 "61",
+                 "58"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 05:05:03 2018</p>
+         Last Run: Mon Nov  5 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -676,38 +676,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>-1</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>86</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>83</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>3</td>
                         <td>1</td>
+                        <td>-2</td>
                         <td>15</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>78</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
-                 "0",
-                 "1"
+                 "-3",
+                 "-2",
+                 "-2"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "3",
-                 "3"
+                 "0",
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
-                 "46",
-                 "46"
+                 "49",
+                 "49",
+                 "47"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "83",
-                 "78"
+                 "80",
+                 "82",
+                 "79"
                ]
              }
            ]
