--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 06:05:07 2018</p>
+         Last Run: Mon Nov  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>24</td>
-                        <td>72</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>17</td>
+                        <td>20</td>
                         <td>74</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>97</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>95</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "17",
-                 "8"
+                 "20",
+                 "10"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
+                 "75",
                  "74",
                  "76"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "97",
-                 "97",
-                 "95"
+                 "96",
+                 "96",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 06:05:07 2018</p>
+         Last Run: Mon Nov  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,13 +247,13 @@
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>-8</td>
-                        <td>-8</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>68</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-11",
                  "-11",
                  "-13"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "68",
-                 "67"
+                 "69",
+                 "70",
+                 "70"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "17",
-                 "17"
+                 "13",
+                 "18",
+                 "18"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 06:05:07 2018</p>
+         Last Run: Mon Nov  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>60</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>2</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>61</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -490,9 +490,9 @@
                         <td>2</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-1",
+                 "0",
                  "0"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "58",
                  "60",
-                 "61",
-                 "58"
+                 "59"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 06:05:07 2018</p>
+         Last Run: Mon Nov  5 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,15 +675,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>15</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>15</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>82</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -705,9 +705,9 @@
                         <td>15</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>79</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-2",
                  "-2"
                ]
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "49",
+                 "50",
+                 "48",
                  "47"
                ]
              },
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "82",
-                 "79"
+                 "79",
+                 "81",
+                 "78"
                ]
              }
            ]
