--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 07:05:02 2018</p>
+         Last Run: Mon Nov  5 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>20</td>
-                        <td>74</td>
+                        <td>19</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
@@ -56,11 +56,11 @@
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-6</td>
-                        <td>-10</td>
+                        <td>-9</td>
                         <td>10</td>
                         <td>76</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NE</td>
                         <td>94</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "20",
+                 "19",
                  "10"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "75",
-                 "74",
+                 "75",
                  "76"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 07:05:02 2018</p>
+         Last Run: Mon Nov  5 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>70</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>W</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
                  "70",
-                 "70"
+                 "71",
+                 "71"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
+                 "12",
                  "18",
                  "18"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 07:05:02 2018</p>
+         Last Run: Mon Nov  5 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -460,25 +460,25 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>NNW</td>
-                        <td>58</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>-1</td>
                         <td>2</td>
                         <td>53</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNW</td>
                         <td>60</td>
                      </tr>
@@ -490,9 +490,9 @@
                         <td>2</td>
                         <td>51</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "0",
+                 "-1",
                  "0"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
                  "60",
-                 "59"
+                 "60",
+                 "58"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 07:05:02 2018</p>
+         Last Run: Mon Nov  5 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,15 +675,15 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>15</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>79</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -693,9 +693,9 @@
                         <td>15</td>
                         <td>48</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>81</td>
+                        <td>82</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "49",
                  "48",
                  "47"
                ]
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "81",
+                 "80",
+                 "82",
                  "78"
                ]
              }
