--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 15:05:02 2018</p>
+         Last Run: Mon Nov  5 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>22</td>
+                        <td>13</td>
                         <td>73</td>
                         <td>0</td>
                         <td>10</td>
@@ -45,24 +45,24 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>20</td>
-                        <td>75</td>
+                        <td>14</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NE</td>
                         <td>97</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>18</td>
-                        <td>76</td>
+                        <td>-7</td>
+                        <td>-11</td>
+                        <td>14</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>96</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-10"
+                 "-11"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "20",
-                 "18"
+                 "13",
+                 "14",
+                 "14"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "73",
-                 "75",
-                 "76"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "97",
                  "97",
-                 "96"
+                 "95"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 15:05:02 2018</p>
+         Last Run: Mon Nov  5 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 15:05:02 2018</p>
+         Last Run: Mon Nov  5 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -480,7 +481,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -492,7 +493,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>59</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -613,8 +614,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "47",
-                 "55",
-                 "59"
+                 "54",
+                 "58"
                ]
              }
            ]
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov  5 15:05:02 2018</p>
+         Last Run: Mon Nov  5 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
