--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Nov  6 14:05:02 2018</p>
+         Last Run: Tue Nov  6 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-8</td>
                         <td>-12</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -57,11 +57,11 @@
                         <td>Clear</td>
                         <td>-9</td>
                         <td>-14</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>3</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "3",
                  "3",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "66",
                  "67",
-                 "67",
-                 "67"
+                 "68"
                ]
              },
              {
