--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 18:05:05 2018</p>
+         Last Run: Sat Nov 10 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>17</td>
+                        <td>15</td>
                         <td>68</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>6</td>
+                        <td>4</td>
                         <td>68</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>86</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>8</td>
-                        <td>68</td>
+                        <td>6</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>94</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
-                 "6",
-                 "8"
+                 "15",
+                 "4",
+                 "6"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "68",
                  "68",
-                 "68"
+                 "69"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "86",
-                 "94"
+                 "77",
+                 "85",
+                 "92"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 18:05:05 2018</p>
+         Last Run: Sat Nov 10 19:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,47 +249,47 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>57</td>
+                        <td>1</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>46</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>51</td>
+                        <td>1</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>47</td>
+                        <td>WSW</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>2</td>
-                        <td>49</td>
+                        <td>1</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>48</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -392,9 +392,9 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "57",
-                 "51",
-                 "49"
+                 "67",
+                 "58",
+                 "53",
+                 "50"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "42",
                  "44",
-                 "46",
-                 "47",
-                 "48"
+                 "45",
+                 "45"
                ]
              }
            ]
