--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 17:05:05 2018</p>
+         Last Run: Mon Nov 12 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>11</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,22 +46,22 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
-                        <td>4</td>
-                        <td>72</td>
+                        <td>5</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>7</td>
                      </tr>
                   </tbody>
@@ -162,7 +162,7 @@
                "data":[
                  "5",
                  "5",
-                 "4"
+                 "5"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "71",
-                 "72"
+                 "73",
+                 "74",
+                 "73"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
                  "10",
+                 "9",
                  "7"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 17:05:05 2018</p>
+         Last Run: Mon Nov 12 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,19 +249,19 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>5</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>-7</td>
-                        <td>-11</td>
+                        <td>-8</td>
+                        <td>-12</td>
                         <td>3</td>
-                        <td>82</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -318,7 +318,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-14",
-                 "-11",
+                 "-12",
                  "-10",
                  "-7"
                ]
@@ -331,7 +331,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-10",
-                 "-7",
+                 "-8",
                  "-5",
                  "-3"
                ]
@@ -403,8 +403,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "88",
-                 "82",
+                 "87",
+                 "81",
                  "74",
                  "66"
                ]
@@ -415,7 +415,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
+                 "6",
                  "8",
                  "12",
                  "15"
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 17:05:05 2018</p>
+         Last Run: Mon Nov 12 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>0</td>
-                        <td>2</td>
-                        <td>54</td>
+                        <td>1</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>27</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>0</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>54</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>51</td>
+                        <td>1</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>36</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>2</td>
-                        <td>54</td>
+                        <td>1</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>41</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -539,7 +539,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "0",
-                 "0",
+                 "2",
                  "2"
                ]
              },
@@ -551,7 +551,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "4",
-                 "4",
+                 "5",
                  "5"
                ]
              }
@@ -609,9 +609,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "54"
+                 "51",
+                 "51",
+                 "51"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "27",
-                 "36",
-                 "41"
+                 "41",
+                 "44",
+                 "47"
                ]
              }
            ]
